state/demo/riser-managed/apps/deployments/testdummy/serving.knative.dev.route.testdummy.yaml
# DO NOT MODIFY! This file was generated by the Riser platform. Changes will be lost
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  annotations:
    riser.dev/revision: "2"
    riser.dev/server-version: v0.0.36
  creationTimestamp: null
  labels:
    riser.dev/app: testdummy
    riser.dev/deployment: testdummy
    riser.dev/environment: demo
  name: testdummy
  namespace: apps
spec:
  traffic:
  - percent: 100
    revisionName: testdummy-2
    tag: r2
